# internal/infrastructure/server/route_scrapper.go
@@ -3,4 +3,5 @@ package server
 func (s server) InitScrapHandlers() {
 	user := s.app.Group("api/v1/scrapper")
 	user.Post("/request", s.scrapperHandler.RequestProcess)
+	user.Post("/sendWebhook", s.scrapperHandler.SendWebhook)
 }
